# TinyGeode

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  README.md  mod.json
example/src/: example.tiny  main.cpp
include/: TinyBaseNode.hpp  TinyNode.hpp
